GNOME Bugzilla – Bug 646836
datetime: fix a critical when showing the panel
Last modified: 2011-04-07 13:13:15 UTC
Fix a critical which can be seen when loading the panel.
Created attachment 185215 [details] [review] datetime: fix a critical when showing the panel The critical was spawned because we were calling gtk_style_attach() before calling gtk_widget_set_window(), but that code can go away entirely.
Looks good to me, we should commit this now
Pushed to master. Attachment 185215 [details] pushed as 534a7a1 - datetime: fix a critical when showing the panel