datetime: fix a critical when showing the panel

The critical was spawned because we were calling gtk_style_attach()
before calling gtk_widget_set_window(), but that code can go away
entirely.

https://bugzilla.gnome.org/show_bug.cgi?id=646836